resolved overlapping issue of mic and search icon

--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,9 @@ h1, h2, h3, h4, h5, h6 {
   align-items: center;
   outline: none !important;
 }
+#i{
+    /* visibility: hidden; */
+}
 #box {
   position: fixed !important;
   top: 20%;
@@ -263,6 +266,10 @@ h1, h2, h3, h4, h5, h6 {
 #box:hover > #search-txt {
   width: 240px;
   padding: 0 6px;
+}
+#box:hover > #i {
+    /* display: block; */
+    visibility: visible;
 }
 #box:hover > .searchbtn {
   background: #0bd54f;
@@ -310,17 +317,6 @@ h1, h2, h3, h4, h5, h6 {
     margin-top: auto;
     margin-bottom: auto;
     color: var(--apppimage);
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-    background-color: #26282b;
-    border-bottom-right-radius: 35px;
-    border-top-left-radius: 35px;
-    transition: all 0.2s;
-    cursor: pointer;
-}
-#numberfact:hover {
-    font-size: 25.5px;
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-    background-color: var(--appblack);
 }
 
 ul li .table{
@@ -384,8 +380,6 @@ ul li .table{
 .light-mode #numberfact
 {
     color: var(--apppimage) !important;
-    box-shadow: rgba(117, 110, 110, 0.3), rgba(rgba(201, 196, 196, 0.22);
-    background-color: #0571dd;
 }
 .light-mode .table td:hover{
        text-decoration: none;
